...

            <android.support.design.widget.TextInputEditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="64dp"
...

            <android.support.design.widget.TextInputEditText
                android:id="@+id/authorName"
                android:layout_width="match_parent"
                android:layout_height="64dp"
...

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prepTime"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cookTime"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/servingSize"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/difficulty">

                <AutoCompleteTextView
...

                <AutoCompleteTextView
                    android:id="@+id/tagsType"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/tagsTaste"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/tagsCourse"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/tagsTimeOfDay"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/tagsDiet"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/tagsRegion"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/tagsOccasion"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/tagsSeason"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ingredientName"
                android:layout_width="match_parent"
                android:layout_height="64dp"
...

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/amountWhole"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/amountFraction"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

                <AutoCompleteTextView
                    android:id="@+id/units"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...

            <Button
                android:id="@+id/addToList"
                android:layout_width="144dp"
                android:layout_height="64dp"
...

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ingredientList"
                android:layout_width="match_parent"
                android:layout_height="240dp"
...

            <android.support.design.widget.TextInputEditText
                android:id="@+id/directionList"
                android:layout_width="match_parent"
                android:layout_height="240dp"
...

            <Button
                android:id="@+id/publish"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
...
