<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="dropdown">
        <item>1x</item>
        <item>2x</item>
        <item>3x</item>
        <item>4x</item>
    </string-array>

    <string-array name="fraction_dropdown">
        <item>1/2</item>
        <item>1/3</item>
        <item>1/4</item>
        <item>1/8</item>
        <item>2/3</item>
        <item>3/4</item>
        <item>3/8</item>
        <item>5/8</item>
        <item>7/8</item>
    </string-array>

    <string-array name="unit_dropdown">
        <item>pc</item>
        <item>pk</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>cup</item>
        <item>pint</item>
        <item>qt</item>
        <item>gal</item>
        <item>mL</item>
        <item>L</item>
        <item>oz</item>
        <item>fl oz</item>
        <item>pinch</item>
        <item>heap</item>
    </string-array>

    <string-array name="tags_time_of_day">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>All Day</item>
    </string-array>

    <string-array name="tags_course">
        <item>Snack</item>
        <item>Appetizer</item>
        <item>Entree</item>
        <item>Dessert</item>
    </string-array>

    <string-array name="tags_type">
        <item>Pastry</item>
        <item>Culinary</item>
    </string-array>

    <string-array name="tags_taste">
        <item>Sweet</item>
        <item>Savory</item>
    </string-array>

    <string-array name="tags_diet">
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Pescatarian</item>
        <item>Mediterranean</item>
        <item>Keto</item>
        <item>Paleo</item>
        <item>Gluten-Free</item>
    </string-array>

    <string-array name="tags_region">
        <item>Western</item>
        <item>Middle Eastern</item>
        <item>West Asian</item>
        <item>East Asian</item>
        <item>European</item>
        <item>African</item>
        <item>Caribbean</item>
        <item>Fusion</item>
    </string-array>

    <string-array name="tags_occasion">
        <item>New Year\'s Eve</item>
        <item>Easter</item>
        <item>Halloween</item>
        <item>Thanksgiving</item>
        <item>Christmas</item>
        <item>Cultural</item>
        <item>Romantic</item>
        <item>Birthday</item>
    </string-array>

    <string-array name="tags_season">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn/Fall</item>
        <item>All Year</item>
    </string-array>

    <string-array name="difficulty_dropdown">
        <item>Easy</item>
        <item>Moderate</item>
        <item>Challenging</item>
        <item>Professional</item>
    </string-array>

</resources>