...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/recipe_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/recipeAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/written_by"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/difficulty_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_display"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/prep_time_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prep_time_display"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cook_time_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cook_time_display"
                    android:textSize="16sp" />

...
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/tagsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

...
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:entries="@array/dropdown" />
        </LinearLayout>

        <TextView
            android:id="@+id/servingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creates_servings"
            android:textSize="18sp"
            android:textStyle="bold" />

...
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions_hint"
            android:textSize="18sp" />

        <View
...
