...
    <string name="title_activity_new_recipe">Submit New Recipe</string>
    <!-- Recipe-Related -->
    <string name="recipes">Recipes</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_section">Recipe Information</string>
    <string name="view_recipes">View Recipes</string>
    <string name="new_recipe">Publish New Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="serving_size">Serving Size</string>
    <string name="serving_size_select">Multiply serving amount: </string>
    <string name="creates_servings">Creates %d servings</string>
    <string name="prep_time">Prep Time</string>
    <string name="cook_time">Cook Time</string>
...
